fix: Solve typo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								
 								<!-- typing__module -->
 								<div class="typing__module">
-									<div class="typed-strings"><span>I'm a software engineer</span>
+									<div class="typed-strings"><span>'m a software engineer</span>
 									</div><span class="typed"></span>
 								</div><!-- End / typing__module -->
 								
